syntax = "proto3";

option java_package = "org.rajeshdyadav.grpc.stubs.helloworld";
option java_outer_classname = "HelloWorldProto";

service HelloWorldService {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
